Created Talks, Editions, Speakers

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
   <header id="header-home" class="fixed-top">
     <div class="container d-flex align-items-center">
       <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
-          class="img-fluid">BITSGoa</span></a>
+          class="img-fluid">BITSGoa</span>
+        <div style="margin-top: -10px;"><span style="font-size: 10px;"><span style="color: #FF2B06;">x
+              = </span>
+            independently organized
+            event</span></div>
+      </a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html" style="color: #FF2B06; font-weight: 700;">Home</a></li>
@@ -120,8 +125,9 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right">
-            <h2>one of India's oldest and biggest student run TEDx conference</h2>
-            <h3>Having a legacy passed on for years, becoming bigger and better with each passing edition</h3>
+            <h2>India's oldest institutional TED<span style="text-transform:lowercase">x</span> conference</h2>
+            <h3>A legacy passed on for years since 2010, an initiative becoming bigger and better with every edition.
+            </h3>
             <a href="./about.html">
               <button class="btn-red">Read more</button>
             </a>
@@ -209,12 +215,15 @@
           Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+
+      <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
+        <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
+        <br>
+        <br>
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
