--- a/team.html
+++ b/team.html
@@ -137,7 +137,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://www.facebook.com/manav.suresh"><i class="icofont-facebook"></i></a>
                   <a href="https://www.instagram.com/manav_suresh/"><i class="icofont-instagram"></i></a>
@@ -146,7 +146,7 @@
               </div>
               <div class="member-info">
                 <h4>Manav Suresh</h4>
-                <span>Coordinator</span>
+                <span>Chief Coordinator</span>
               </div>
             </div>
           </div>
