--- a/photos.html
+++ b/photos.html
@@ -49,7 +49,13 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
       <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
-          class="img-fluid">BITSGoa</span></a>
+          class="img-fluid">BITSGoa</span>
+        <div style="margin-top: -10px;"><span style="font-size: 10px;"><span style="color: #FF2B06;">x
+              = </span>
+            independently organized
+            event</span></div>
+      </a>
+
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
