--- a/blog.html
+++ b/blog.html
@@ -48,10 +48,16 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
       <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
-          class="img-fluid">BITSGoa</span></a>
+          class="img-fluid">BITSGoa</span>
+        <div style="margin-top: -10px;"><span style="font-size: 10px;"><span style="color: #FF2B06;">x
+              = </span>
+            independently organized
+            event</span></div>
+      </a>
+
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="" class="nav-links">About</a>
             <ul>
@@ -63,7 +69,7 @@
           <li><a href="editions.html" class="nav-links">Editions</a></li>
           <li><a href="speakers.html" class="nav-links">Speakers</a></li>
           <li><a href="talks.html" class="nav-links">Talks</a></li>
-          <li><a href="blog.html" class="nav-links">Blog</a></li>
+          <li class="active"><a href="blog.html" class="nav-links">Blog</a></li>
           <li><a href="photos.html" class="nav-links">Photos</a></li>
           <li><a href="events.html" class="nav-links">Events</a></li>
 
@@ -122,12 +128,15 @@
           Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+
+      <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
+        <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
+        <br>
+        <br>
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
