--- a/team.html
+++ b/team.html
@@ -47,15 +47,21 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
       <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
-          class="img-fluid">BITSGoa</span></a>
+          class="img-fluid">BITSGoa</span>
+        <div style="margin-top: -10px;"><span style="font-size: 10px;"><span style="color: #FF2B06;">x
+              = </span>
+            independently organized
+            event</span></div>
+      </a>
+
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="" class="nav-links">About</a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
+              <li class="active"><a href="team.html">Team</a></li>
             </ul>
           </li>
 
@@ -174,12 +180,15 @@
           Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+
+      <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
+        <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
+        <br>
+        <br>
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
