--- a/blog-single.html
+++ b/blog-single.html
@@ -122,12 +122,15 @@
           Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
         </div>
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+
+      <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
+        <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
+        <br>
+        <br>
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
