--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div style="text-align: center;">
           <img src="./assets/img/loader.svg" class="loader" />
         </div>
-        <div class="row portfolio-container-home port-cards">
+        <div class="row portfolio-container-home port-cards photos-home">
           <!-- Photos -->
         </div>
         <button class="btn-red" style="margin: auto">View All</button>
