--- a/speaker-single.html
+++ b/speaker-single.html
@@ -14,9 +14,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
 
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -46,17 +44,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
-      <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
-          class="img-fluid">BITSGoa</span>
-        <div style="margin-top: -10px;"><span style="font-size: 10px;"><span style="color: #FF2B06;">x
-              = </span>
-            independently organized
-            event</span></div>
-      </a>
-
+      <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa" class="img-fluid">BITSGoa</span></a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="" class="nav-links">About</a>
             <ul>
@@ -65,8 +56,8 @@
             </ul>
           </li>
 
-          <li><a href="editions.html" class="nav-links">Editions</a></li>
-          <li class="active"><a href="speakers.html" class="nav-links">Speakers</a></li>
+          <li><a href="editions.html"  class="nav-links">Editions</a></li>
+          <li><a href="speakers.html" class="nav-links">Speakers</a></li>
           <li><a href="talks.html" class="nav-links">Talks</a></li>
           <li><a href="blog.html" class="nav-links">Blog</a></li>
           <li><a href="photos.html" class="nav-links">Photos</a></li>
@@ -96,61 +87,69 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Our Speakers Section ======= -->
     <section id="team" class="team section-bg">
-      <div class="container" style="min-height: 65vh;">
-
+      <div class="container">
         <div class="section-title" data-aos="fade-up">
-          <h2><strong>Speakers</strong></h2>
-          <p>Every year, we host speakers from various walks of life, who mesmerize the audience with their life
-            stories and ideas worth sharing, staying true to what TED stands for. From famous celebrities to prominent
-            names in the corporate sector to jaw-dropping performances to this list never ending (because ideas and
-            talents
-            know no boundaries), our annual conference is a culmination of various ingredients.
-          </p>
+          <h2> <strong id="title">speaker</strong></h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
+              <div class="member-img">
+                <a href="assets\img\TEDxpressions[DoPy] (30).jpg" class="venobox preview-link">
+                  <img id="profile-pic" class="img-fluid" alt="" src="./assets/img/loader.svg">
+                </a>
+              </div>
+            </div>
+          </div>
+                 </div>
+      </div>
+    </section>
+
+    <!-- ======= About Us Section ======= -->
+    <section id="about-us" class="about-us">
+      <div class="container" data-aos="fade-up">
+        <h4 id="about">About</h4>
+        <div class="row content">
+          <div class="col-lg-12 pt-4 pt-lg-0">
+            <p id="about-content">
+            </p>
+            <h4 style="margin-top: 50px;">Year</h4><p id="year"></p>
+          </div>
         </div>
 
-        <div class="row row1">
-          <!-- this section will get card of speakers from main.js for this add data in main.js -->
+      </div>
+    </section><!-- End About Us Section -->
+     <!-- ======= Footer ======= -->
+     <footer id="footer">
+
+      <div class="container d-md-flex py-4">
+  
+        <div class="mr-md-auto text-center text-md-left">
+          <div class="copyright">
+            <img src="./assets/img/devsoc.png" style="width: 100px;">
+          </div>
+          <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
+            Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
+          </div>
         </div>
-        <div style="text-align: center;">
-          <img src="./assets/img/loader.svg" class="loader" />
+  
+        <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
+          <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
+          <br>
+          <br>
+          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
-    </section><!-- End Our Team Section -->
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-
-    <div class="container d-md-flex py-4">
-
-      <div class="mr-md-auto text-center text-md-left">
-        <div class="copyright">
-          <img src="./assets/img/devsoc.png" style="width: 100px;">
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
-        </div>
-      </div>
-
-      <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
-        <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
-        <br>
-        <br>
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
+    </footer><!-- End Footer -->
+  
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
@@ -168,7 +167,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/data.js"></script>
+  <script src="assets/js/speaker.js"></script>
 
 </body>
 
