Final commit - Bug testing

--- a/blog-single.html
+++ b/blog-single.html
@@ -91,7 +91,7 @@
     <!-- End Breadcrumbs -->
 
     <!-- ======= Blog Section ======= -->
-    <section id="blog" class="blog">
+    <section id="blog" class="blog" style="min-height: 70vh;">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 entries" id="blog-content-single">
@@ -112,14 +112,12 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          <img src="./assets/img/devsoc.png" style="width: 100px;">
+          <a href="https://devsoc.club" target="_blank">
+            <img src="./assets/img/devsoc.png" style="width: 100px;">
+          </a>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
+           Made with ❤️ by <a href="https://devsoc.club" target="_blank">DevSoc</a>
         </div>
       </div>
 
@@ -134,7 +132,6 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
