--- a/contact.html
+++ b/contact.html
@@ -188,14 +188,12 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          <img src="./assets/img/devsoc.png" style="width: 100px;">
+          <a href="https://devsoc.club" target="_blank">
+            <img src="./assets/img/devsoc.png" style="width: 100px;">
+          </a>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
+           Made with ❤️ by <a href="https://devsoc.club" target="_blank">DevSoc</a>
         </div>
       </div>
 
