--- a/speaker-single.html
+++ b/speaker-single.html
@@ -96,7 +96,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <a href="assets\img\TEDxpressions[DoPy] (30).jpg" class="venobox preview-link">
+                <a id="profile-link" class="venobox preview-link">
                   <img id="profile-pic" class="img-fluid" alt="" src="./assets/img/loader.svg">
                 </a>
               </div>
@@ -127,14 +127,12 @@
   
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
-            <img src="./assets/img/devsoc.png" style="width: 100px;">
+            <a href="https://devsoc.club" target="_blank">
+              <img src="./assets/img/devsoc.png" style="width: 100px;">
+            </a>
           </div>
           <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-            Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
+             Made with ❤️ by <a href="https://devsoc.club" target="_blank">DevSoc</a>
           </div>
         </div>
   
