--- a/team.html
+++ b/team.html
@@ -96,67 +96,18 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Our Team Section ======= -->
-    <section id="team" class="team section-bg" style="margin-bottom: 50px;">
+    <section id="team" class="team section-bg" style="min-height: 70vh;">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
           <h2>Our <strong>Team</strong></h2>
           <p>The organizing team of our upcoming edition (12th edition, year 2021) </p>
         </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex">
-            <div class="member" data-aos="fade-up">
-              <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.facebook.com/anjani.nair.31"><i class="icofont-facebook"></i></a>
-                  <a href="https://www.instagram.com/anjin2610/"><i class="icofont-instagram"></i></a>
-                  <a href="mailto:anjaninair1026@gmail.com"><i class="icofont-email"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Anjani Nair</h4>
-                <span>Licensee</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.facebook.com/zain.zafar.182"><i class="icofont-facebook"></i></a>
-                  <a href="https://www.instagram.com/zain.zaf/"><i class="icofont-instagram"></i></a>
-                  <a href="mailto:zafarzain001@gmail.com"><i class="icofont-email"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Zain Zafar</h4>
-                <span>Curator</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpeg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.facebook.com/manav.suresh"><i class="icofont-facebook"></i></a>
-                  <a href="https://www.instagram.com/manav_suresh/"><i class="icofont-instagram"></i></a>
-                  <a href="mailto:manavsuresh16@gmail.com"><i class="icofont-email"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Manav Suresh</h4>
-                <span>Chief Coordinator</span>
-              </div>
-            </div>
-          </div>
-
+        <div style="text-align: center;">
+          <img src="./assets/img/loader.svg" class="loader" />
+        </div>
+        <div class="row rowTeam">
+          <!-- Members' cards appear here -->
         </div>
 
       </div>
@@ -170,14 +121,12 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          <img src="./assets/img/devsoc.png" style="width: 100px;">
+          <a href="https://devsoc.club" target="_blank">
+            <img src="./assets/img/devsoc.png" style="width: 100px;">
+          </a>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Made with ❤️ by <a href="https://devsoc.club">DevSoc</a>
+           Made with ❤️ by <a href="https://devsoc.club" target="_blank">DevSoc</a>
         </div>
       </div>
 
@@ -210,6 +159,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/team.js"></script>
 
 </body>
 
