Final commit - Bug testing

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
         <span><button class="btn fifth" id="explore">Explore now ▼</button></span>
       </div>
       <div class="waveWrapperInner bgTop">
-        <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')">
+        <div class="wave waveTop" style="background-image: url('https://front-end-noobs.com/jecko/img/wave-top.png')">
         </div>
       </div>
       <div class="waveWrapperInner bgMiddle">
-        <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')">
+        <div class="wave waveMiddle" style="background-image: url('https://front-end-noobs.com/jecko/img/wave-mid.png')">
         </div>
       </div>
       <div class="waveWrapperInner bgBottom">
-        <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')">
+        <div class="wave waveBottom" style="background-image: url('https://front-end-noobs.com/jecko/img/wave-bot.png')">
         </div>
       </div>
     </div>
