Final commit - Bug testing

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
     <section id="team" class="team section-bg">
       <div class="container">
         <div class="section-title" data-aos="fade-up">
-          <h2> <strong>TEDX BITS GOA</strong></h2>
+          <h2> <strong>TED<span style="text-transform: lowercase;">x</span> BITS GOA</strong></h2>
         </div>
         <div class="row">
           
