Final commit - Bug testing

--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i> An exclusive team of undergraduates from BITS Pilani KK Birla Goa
                 Campus.</li>
-              <li><i class="ri-check-double-line"></i> Featured people such as Kiran Bedi, Kalki Koechlin, Clinton
-                Cerejo, Sonam Wangchuk, Sumeet Vyas and many others.</li>
+              <li><i class="ri-check-double-line"></i> Featured people such as <a href="speaker-single.html?id=5ecae37dd488b100177a272f">Elli Avrram</a>, <a href="speaker-single.html?id=5ecae3d2d488b100177a2730">Viraj Ghelani</a>, <a href="speaker-single.html?id=5ecae506d488b100177a2731">Kirti Kulhari</a>, <a href="speaker-single.html?id=5ecae5ead488b100177a2732">Vilas Nayak</a>, <a href="speaker-single.html?id=5ecae67ed488b100177a2733">Kajal Aggarwal</a> and many others.</li>
             </ul>
           </div>
         </div>
