--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
     <section id="team" class="team section-bg">
       <div class="container">
         <div class="section-title" data-aos="fade-up">
-          <h2> <strong>TED<span style="text-transform: lowercase;">x</span> BITS GOA</strong></h2>
+          <h2> <strong>TED<span style="text-transform: lowercase;">x</span>BITSG<span style="text-transform: lowercase;">oa</span></strong></h2>
         </div>
         <div class="row">
           
@@ -164,7 +164,7 @@
 
         <div class="row content">
           <div class="col-lg-12 pt-4 pt-lg-0">
-            <h1> About Tedx</h1>
+            <h1> About TEDx</h1>
             <img src="./assets/img/tedx.png" style="width: 200px; margin: 30px 0;">
             <p><b>x= independently organised event</b></p>
             <p>
@@ -180,7 +180,7 @@
 
         <div class="row content">
           <div class="col-lg-12 pt-4 pt-lg-0">
-            <h1>About Ted</h1>
+            <h1>About TED</h1>
             <p>
               TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day conference in California 30 years ago, TED has grown to support its mission with multiple initiatives. The two annual TED Conferences invite the world's leading thinkers and doers to speak for 18 minutes or less. Many of these talks are then made available, free, at TED.com. TED speakers have included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala and Daniel Kahneman.
               The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's media initiatives include TED.com, where new TED Talks are posted daily; TED Translators, which provides subtitles and interactive transcripts as well as translations from volunteers worldwide; the educational initiative TED-Ed. TED has established The Audacious Project that takes a collaborative approach to funding ideas with the potential to create change at thrilling scale; TEDx, which supports individuals or groups in hosting local, self- organized TED-style events around the world, and the TED Fellows program, helping world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities.
