--- a/team.html
+++ b/team.html
@@ -101,7 +101,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Our <strong>Team</strong></h2>
-          <p>The organizing team of our upcoming edition (12th edition, year 2021) </p>
+          <p>The organizing team of our upcoming team (12th edition, year 2021) </p>
         </div>
         <div style="text-align: center;">
           <img src="./assets/img/loader.svg" class="loader" />
