--- a/talks.html
+++ b/talks.html
@@ -102,7 +102,7 @@
       <div class="eventContent">
         <div class="talk">
           <iframe width="100%" height="100%"
-            src="https://www.youtube.com/embed/videoseries?list=PLQxnIssOPV4kAI_Apf2TZ0fsl6ST17PGU&autoplay=1"
+            src="https://www.youtube.com/embed/videoseries?list=PLQxnIssOPV4kAI_Apf2TZ0fsl6ST17PGU&autoplay=1&playsinline=1"
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
