--- a/talks.html
+++ b/talks.html
@@ -98,13 +98,15 @@
     <div class="container-fluid" id="eventsHeader">
       <h1 class="Events">Talks</h1>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color:black">
       <div class="eventContent">
-        <div class="talk">
-          <iframe width="100%" height="100%"
-            src="https://www.youtube.com/embed/videoseries?list=PLQxnIssOPV4kAI_Apf2TZ0fsl6ST17PGU&autoplay=1&playsinline=1"
-            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div class = 'talk'>
+          <iframe width="100%" style="margin: 50px 0; min-height: 300px; height: 55vh;" src="https://www.youtube.com/embed/1pkux2P7cnA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" style="margin: 50px 0; min-height: 300px; height: 55vh;" src="https://www.youtube.com/embed/zW1zrvqsPFc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" style="margin: 50px 0; min-height: 300px; height: 55vh;"  src="https://www.youtube.com/embed/eVsj_8SsW8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" style="margin: 50px 0; min-height: 300px; height: 55vh;" src="https://www.youtube.com/embed/BjKiwONNEPc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" style="margin: 50px 0; min-height: 300px; height: 55vh;" src="https://www.youtube.com/embed/dqDCrbmolrQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" style="margin: 50px 0; min-height: 300px; height: 55vh;" src="https://www.youtube.com/embed/0vu0Pfpw_HA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
