--- a/events.html
+++ b/events.html
@@ -1,165 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Events - Company Bootstrap Template</title>
+    <meta content="" name="descriptison" />
+    <meta content="" name="keywords" />
 
-  <title>Events - Company Bootstrap Template</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
+    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet" />
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
+    <!-- =======================================================
   * Template Name: Company - v2.0.0
   * Template URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-</head>
+  </head>
 
-<body>
+  <body>
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+      <div class="container d-flex align-items-center">
+        <a href="index.html" class="logo mr-auto"
+          ><img
+            id="logo"
+            src="assets/img/tedx.png"
+            alt="TEDx BitsGoa"
+            class="img-fluid"
+          />BITSGoa
+          <div style="margin-top: -10px;">
+            <span style="font-size: 10px;">
+              <span style="color: #ff2b06;">x</span>
+              <span> = independently organized event</span>
+            </span>
+          </div>
+        </a>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-      <a href="index.html" class="logo mr-auto"><img id="logo" src="assets/img/tedx.png" alt="TEDx BitsGoa"
-          class="img-fluid">BITSGoa</span>
-        <div style="margin-top: -10px;"><span style="font-size: 10px;"><span style="color: #FF2B06;">x
-              = </span>
-            independently organized
-            event</span></div>
-      </a>
-
-      <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-
-          <li class="drop-down"><a href="" class="nav-links">About</a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-            </ul>
-          </li>
-
-          <li><a href="editions.html" class="nav-links">Editions</a></li>
-          <li><a href="speakers.html" class="nav-links">Speakers</a></li>
-          <li><a href="talks.html" class="nav-links">Talks</a></li>
-          <li><a href="blog.html" class="nav-links">Blog</a></li>
-          <li><a href="photos.html" class="nav-links">Photos</a></li>
-          <li class="active"><a href="events.html" class="nav-links">Events</a></li>
-
-
-        </ul>
-      </nav>
-
-    </div>
-  </header>
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Events</h2>
-          <ol>
+        <nav class="nav-menu d-none d-lg-block">
+          <ul>
             <li><a href="index.html">Home</a></li>
-            <li>Events</li>
-          </ol>
-        </div>
 
+            <li class="drop-down">
+              <a href="" class="nav-links">About</a>
+              <ul>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="team.html">Team</a></li>
+              </ul>
+            </li>
+
+            <li><a href="editions.html" class="nav-links">Editions</a></li>
+            <li><a href="speakers.html" class="nav-links">Speakers</a></li>
+            <li><a href="talks.html" class="nav-links">Talks</a></li>
+            <li><a href="blog.html" class="nav-links">Blog</a></li>
+            <li><a href="photos.html" class="nav-links">Photos</a></li>
+            <li class="active">
+              <a href="events.html" class="nav-links">Events</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </section><!-- End Breadcrumbs -->
-    <div class="container-fluid" id="eventsHeader">
-      <h1 class="Events">Events</h1>      
-    </div>
-    <div class="container-fluid" >
-      <div class="eventContent">
-        <h2 class="InHead">Informals</h2>
-        <p class="inPara"> One of the only events held in college that manage to leave every lecture theatre seat occupied, TEDx Informals captures the heart and soul of the department. True to its name, it serves as a very informal pre-induction introduction to the various trials and tribulations of college life via witty presentations by TEDx members. Every year, the audience is left in splits, thus attracting throngs of people to the TEDx inductions!
-          <hr class="breaker">
-          <h2 class="InHead">TEDxpressions</h2>
-         <p class="inPara">Held for the first time last year, TEDXpressions is a way to get different voices heard. Students of the college give various talks, and their different experiences and expressions add a fresh note of novelty to our viewpoints. The most captivating speaker receives a chance to become the campus ambassador and narrate their story to larger audiences during the main conference.</p>
-         <hr class="breaker">
-         <h2 class="InHead">TEDxBITSGoa<br> (The annual conference)</h2>
-         <p class="inPara">One of the most awaited events of the year, our main conference weaves together diverse voices into an enthralling tapestry. We host an array of esteemed speakers from myriad walks of life, who leave the audience spellbound, year after year. Our unique annual themes give the talks a common thread, enabling all the speakers to weave their words together into a coherent whole. From actors and innovators to magicians and artists, we’ve had almost everyone take the stage and share their wisdom.</p>        </p>
-         <hr class="breaker">
-         <h2 class="InHead">Talk Releases</h2>
-         <p class="inPara">For ensuring that no one misses out on the topics addressed in our conference and as a regulation set by TED, we release the talks on YouTube for maximum outreach. This forms an integral part of us functioning as a licensed TEDx department.</p>        </p>
+    </header>
 
+    <main id="main">
+      <!-- ======= Breadcrumbs ======= -->
+      <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+          <div class="d-flex justify-content-between align-items-center">
+            <h2>Events</h2>
+            <ol>
+              <li><a href="index.html">Home</a></li>
+              <li>Events</li>
+            </ol>
+          </div>
         </div>
-    </div>
-    <footer id="footer">
+      </section>
+      <!-- End Breadcrumbs -->
+      <div class="container-fluid" id="eventsHeader">
+        <h1 class="Events">Events</h1>
+      </div>
+      <div class="container-fluid">
+        <div class="eventContent">
+          <h2 class="InHead">Informals</h2>
+          <p class="inPara">
+            One of the only events held in college that manage to leave every
+            lecture theatre seat occupied, TEDx Informals captures the heart and
+            soul of the department. True to its name, it serves as a very
+            informal pre-induction introduction to the various trials and
+            tribulations of college life via witty presentations by TEDx
+            members. Every year, the audience is left in splits, thus attracting
+            throngs of people to the TEDx inductions!
+          </p>
+          <hr class="breaker" />
+          <h2 class="InHead">TEDxpressions</h2>
+          <p class="inPara">
+            Held for the first time last year, TEDXpressions is a way to get
+            different voices heard. Students of the college give various talks,
+            and their different experiences and expressions add a fresh note of
+            novelty to our viewpoints. The most captivating speaker receives a
+            chance to become the campus ambassador and narrate their story to
+            larger audiences during the main conference.
+          </p>
+          <hr class="breaker" />
+          <h2 class="InHead">
+            TEDxBITSGoa<br />
+            (The annual conference)
+          </h2>
+          <p class="inPara">
+            One of the most awaited events of the year, our main conference
+            weaves together diverse voices into an enthralling tapestry. We host
+            an array of esteemed speakers from myriad walks of life, who leave
+            the audience spellbound, year after year. Our unique annual themes
+            give the talks a common thread, enabling all the speakers to weave
+            their words together into a coherent whole. From actors and
+            innovators to magicians and artists, we’ve had almost everyone take
+            the stage and share their wisdom.
+          </p>
+          <hr class="breaker" />
+          <h2 class="InHead">Talk Releases</h2>
+          <p class="inPara">
+            For ensuring that no one misses out on the topics addressed in our
+            conference and as a regulation set by TED, we release the talks on
+            YouTube for maximum outreach. This forms an integral part of us
+            functioning as a licensed TEDx department.
+          </p>
+        </div>
+      </div>
+    </main>
 
+    <footer id="footer">
       <div class="container d-md-flex py-4">
-  
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
             <a href="https://devsoc.club" target="_blank">
-              <img src="./assets/img/devsoc.png" style="width: 100px;">
+              <img src="./assets/img/devsoc.png" style="width: 100px;" />
             </a>
           </div>
           <div class="credits">
-             Made with ❤️ by <a href="https://devsoc.club" target="_blank">DevSoc</a>
+            Made with ❤️ by
+            <a href="https://devsoc.club" target="_blank">DevSoc</a>
           </div>
         </div>
-  
-        <div class="social-links text-center text-md-right pt-3 pt-md-0" style="margin-top: 10px;">
-          <span style="margin-right: 10px;"> Follow <span style="color: #FF2B06;">TEDx BITSGoa</span> on</span>
-          <br>
-          <br>
+
+        <div
+          class="social-links text-center text-md-right pt-3 pt-md-0"
+          style="margin-top: 10px;"
+        >
+          <span style="margin-right: 10px;">
+            Follow <span style="color: #ff2b06;">TEDx BITSGoa</span> on</span
+          >
+          <br />
+          <br />
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/company/tedx-bitsgoa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/tedxbitsgoa" class="facebook"
+            ><i class="bx bxl-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/tedxbitsgoa/" class="instagram"
+            ><i class="bx bxl-instagram"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/company/tedx-bitsgoa/"
+            class="linkedin"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
         </div>
       </div>
-    </footer><!-- End Footer -->
-    
-    
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-  
-  
-  
+    </footer>
+    <!-- End Footer -->
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/jquery-sticky/jquery.sticky.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/jquery-sticky/jquery.sticky.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
 
-</body>
-
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
